--- a/src/main/webapp/style_home.css
+++ b/src/main/webapp/style_home.css
@@ -24,12 +24,6 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
-aftaleTabe{
-    border: thin;
-
-}
-
-
 header{
     position:absolute;
     top: 0;
@@ -148,9 +142,9 @@ header ul li a.active
     transition: background 0.2s, border-color 0.2s;
 }
 
-.button{
-    width: 30%;
-    height: 50px;
+button{
+    width: 100%;
+    height: 40px;
     padding: 1rem 1rem;
     font-weight: bold;
     font-size: 0.8rem;
@@ -162,6 +156,7 @@ header ul li a.active
     background: var(--color-primary);
 
 }
+
 
 .input:focus {
     border-color: var(--color-primary);
@@ -254,4 +249,31 @@ header ul li a.active
     font-size: 0.85rem;
     color: var(--color-error);
 
+}
+
+table {
+    border-collapse: collapse;
+    border: 1px solid black;
+    border-width: thin;
+    margin: 25px 0;
+    font-size: 1em;
+    font-family: sans-serif;
+    width: 100%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+table th,
+table td {
+    padding: 12px 15px;
+    text-align: left;
+    border: 1px solid black;
+}
+
+
+table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
 }
