--- a/src/main/webapp/style_home.css
+++ b/src/main/webapp/style_home.css
@@ -114,6 +114,7 @@ header ul li a.active
     border-radius: var(--border-radius);
     background: #ffffff;
     justify-content: center;
+    text-align: center;
     border-style: solid;
     border-width: 2px;
     border-color: var(--border-color);
@@ -131,7 +132,6 @@ header ul li a.active
 
 .input {
     display: block;
-    width: 100%;
     height: 30px;
     padding: 0.75rem;
     box-sizing: border-box;
@@ -142,9 +142,9 @@ header ul li a.active
     transition: background 0.2s, border-color 0.2s;
 }
 
-button{
-    width: 100%;
+.button{
     height: 40px;
+    width: 200px;
     padding: 1rem 1rem;
     font-weight: bold;
     font-size: 0.8rem;
@@ -177,7 +177,19 @@ button{
     border-style: solid;
     border-width: 2px;
     border-color: var(--border-color);
+}
 
+.foundCPR{
+
+    text-align: center;
+    font-size: 14pt;
+}
+
+hr.style-one {
+    border: 0;
+    height: 1px;
+    background: #333;
+    background-image: linear-gradient(to right, #ccc, #333, #ccc);
 }
 
 .nicpic{
@@ -190,6 +202,18 @@ button{
 
 .hidden {
     display:none;
+}
+
+.aftaleListContainer{
+
+    height:300px;
+    width:900px;
+    overflow:auto;
+    padding:2%;
+    border-style: solid;
+    border-width: 1px;
+    border-color: var(--color-primary);
+    border-radius: var(--border-radius);
 }
 
 .overlay {
@@ -248,7 +272,12 @@ button{
     margin-top: 0.5rem;
     font-size: 0.85rem;
     color: var(--color-error);
+}
 
+.success-message {
+    margin-top: 0.5rem;
+    font-size: 0.85rem;
+    color: var(--color-succes);
 }
 
 table {
