--- a/src/main/webapp/style_home.css
+++ b/src/main/webapp/style_home.css
@@ -13,7 +13,7 @@ header {
     text-align: right;
 
     width: 100%;
-    max-width: 1500px;
+    max-width: 1600px;
 
 }
 body {
@@ -39,7 +39,7 @@ header{
     left: 0;
     width: 100%;
     max-width: 1720px;
-    padding: 30px 100px;
+    padding: 10px 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -60,8 +60,8 @@ header .logo{
 }
 
 header .ekglogo{
-    width: 80px;
-    height: 30px;
+    width: 60px;
+    height: 20px;
 
 }
 header ul{
@@ -103,8 +103,10 @@ header ul li a.active
 }
 
 .main-content {
-    margin-top: 80px;
+    margin-top: 50px;
     display: grid;
+    width: 100%;
+    max-width: 1720px;
 
     grid-template-columns: 1fr 4fr;
 
@@ -114,11 +116,11 @@ header ul li a.active
 .sidebar {
 
     float: left;
-    width: 300px;
+    width: 100%;
     height: 700px;
-    max-width: 300px;
-    margin: 20px 90px;
-    padding: 2rem;
+    max-width: 240px;
+    margin: 20px 40px;
+    padding: 1rem;
     box-shadow: 0 0 40px rgba(0,0,0,0.2);
     border-radius: var(--border-radius);
     background: #ffffff;
@@ -128,9 +130,22 @@ header ul li a.active
     border-width: 2px;
     border-color: var(--border-color);
 
+}
 
+.sitecontent {
 
-
+    float: left;
+    width: 100%;
+    height: 700px;
+    max-width: 1270px;
+    margin: 20px 5px;
+    padding: 1rem;
+    box-shadow: 0 0 40px rgba(0,0,0,0.2);
+    border-radius: var(--border-radius);
+    background: #ffffff;
+    border-style: solid;
+    border-width: 2px;
+    border-color: var(--border-color);
 }
 
 .pBar{
@@ -139,9 +154,10 @@ header ul li a.active
 
 }
 
-.input {
+input {
     display: block;
     height: 30px;
+
     padding: 0.75rem;
     box-sizing: border-box;
     border-radius: var(--border-radius);
@@ -151,10 +167,29 @@ header ul li a.active
     transition: background 0.2s, border-color 0.2s;
 }
 
+textarea {
+
+    display: block;
+    height: 30px;
+
+    padding: 0.75rem;
+    box-sizing: border-box;
+    border-radius: var(--border-radius);
+    border: 1px solid black;
+    outline: none;
+    background: #eeeeee;
+    transition: background 0.2s, border-color 0.2s;
+}
+
+textarea.subject {
+    width: 500px;
+    height: 200px;
+}
+
 .button{
-    height: 40px;
+    height: 30px;
     width: 200px;
-    padding: 1rem 1rem;
+
     font-weight: bold;
     font-size: 0.8rem;
     color: #ffffff;
@@ -167,26 +202,18 @@ header ul li a.active
 }
 
 
-.input:focus {
+input:focus {
     border-color: var(--color-primary);
     background: #ffffff;
 
 }
-.sitecontent {
 
-    float: left;
-    width: 100%;
-    height: 700px;
-    max-width: 1000px;
-    margin: 20px 5px;
-    padding: 2rem;
-    box-shadow: 0 0 40px rgba(0,0,0,0.2);
-    border-radius: var(--border-radius);
+textarea:focus {
+    border-color: var(--color-primary);
     background: #ffffff;
-    border-style: solid;
-    border-width: 2px;
-    border-color: var(--border-color);
+
 }
+
 
 .foundCPR{
 
@@ -201,13 +228,6 @@ hr.style-one {
     background-image: linear-gradient(to right, #ccc, #333, #ccc);
 }
 
-.nicpic{
-    width: 150px;
-    height: 200px;
-    text-align:center;
-
-
-}
 
 .hidden {
     display:none;
@@ -215,14 +235,11 @@ hr.style-one {
 
 .aftaleListContainer{
 
-    height:300px;
+    height:500px;
     width:900px;
     overflow:auto;
     padding:2%;
-    border-style: solid;
-    border-width: 1px;
-    border-color: var(--color-primary);
-    border-radius: var(--border-radius);
+
 }
 
 .overlay {
@@ -289,7 +306,7 @@ hr.style-one {
     color: var(--color-succes);
 }
 
-table {
+.table {
     border-collapse: collapse;
     border: 1px solid black;
     border-width: thin;
@@ -300,18 +317,41 @@ table {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
-table th,
-table td {
+.table th,
+.table td {
     padding: 12px 15px;
     text-align: left;
     border: 1px solid black;
 }
 
 
-table tbody tr:nth-of-type(even) {
+.table tbody tr:nth-of-type(even) {
     background-color: #f3f3f3;
 }
 
-table tbody tr:last-of-type {
+.table tbody tr:last-of-type {
     border-bottom: 2px solid #009879;
+}
+.container {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+#containerReq {
+    margin-left: 10px;
+}
+
+#aftaleForm * {
+
+
+}
+
+#wrapper {
+    display: flex;
+}
+#first {
+
+}
+#second {
+
 }
