Fixed a major sqlcon issue. All consultationlist and consultation view implemented.

--- a/src/main/webapp/appointment.css
+++ b/src/main/webapp/appointment.css
@@ -1,4 +1,6 @@
-/* https://form.taxi/design/css/ft-form-styles-v3.css */
+/* https://form.taxi/design/css/ft-form-styles-v3.css
+https://form.taxi/en/sample-forms/appointment-request
+*/
 
 #ft-form {
     font-family: inherit;
