--- a/src/main/webapp/style_home.css
+++ b/src/main/webapp/style_home.css
@@ -114,8 +114,9 @@ header ul li a.active
 }
 
 .sidebar {
-
+    display: flex;
     float: left;
+    position: relative;
     width: 100%;
     height: 700px;
     max-width: 240px;
@@ -191,8 +192,20 @@ textarea.comment{
     width: 700px;
     height: 200px;
     overflow: scroll;
+}
+#contentdiv{
+    position:relative;
+
+}
+
+.contentdiv{
 
 
+}
+#footerdiv{
+    max-height: 200px;
+    height: 100%;
+    border: 1px black;
 }
 
 div.fields{
@@ -232,7 +245,15 @@ div.fields{
     margin-bottom: auto;
 }
 
+.buttonbottom{
 
+    position: absolute;
+    justify-content: center;
+    text-align: center;
+    margin-bottom:50px;
+
+    bottom: 0px;
+}
 input:focus {
     border-color: var(--color-primary);
     background: #ffffff;
